--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,1 +1,84 @@
+header {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  margin-top: 40px; }
+
+#homepage-logo img {
+  width: 300px;
+  height: 100px; }
+
+#navigation {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  width: 100%; }
+
+#main {
+  display: flex;
+  justify-content: center;
+  margin: 20px 100px; }
+  #main__searchbar {
+    width: 110%;
+    height: 70px;
+    background-color: #E7E7E7;
+    border-radius: 5px;
+    border: #E7E7E7 solid 3px;
+    padding-left: 20px; }
+  #main__button {
+    height: 60px;
+    background-color: #E7E7E7;
+    margin-left: -50px;
+    margin-top: 5px;
+    border: none;
+    cursor: pointer; }
+
+#secondary {
+  display: flex;
+  justify-content: left;
+  margin: 20px 100px; }
+  #secondary input {
+    width: 170px;
+    height: 70px;
+    padding: 15px;
+    border-radius: 5px;
+    margin-right: 20px; }
+    #secondary input::-moz-placeholder {
+      color: #ffffff;
+      opacity: 1; }
+    #secondary input:-ms-input-placeholder {
+      color: #ffffff;
+      opacity: 1; }
+    #secondary input::placeholder {
+      color: #ffffff;
+      opacity: 1; }
+  #secondary__blue input {
+    background-color: #3282F7;
+    border: #3282F7; }
+  #secondary__blue button {
+    background-color: #3282F7;
+    border: #3282F7; }
+  #secondary__green input {
+    background: #68D9A4;
+    border: #68D9A4; }
+  #secondary__green button {
+    background: #68D9A4;
+    border: #68D9A4; }
+  #secondary__red input {
+    background: #ED6454;
+    border: #ED6454; }
+  #secondary__red button {
+    background: #ED6454;
+    border: #ED6454; }
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif; }
+
+#recipes-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px; }
 
