--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,2 +1,13 @@
 @import "./main";
 
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', sans-serif;
+}
+
+#recipes-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+}
