--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -9,3 +9,18 @@
         @content;
     }
 }
+
+@mixin searchbar-menu {
+    list-style: none;
+    color: #ffffff;
+    width: 670px;
+    display: none;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 20px;
+    grid-column-gap: 30px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    margin-right: 20px;
+    padding: 0 0 15px 15px;
+    z-index: -1;
+}
