--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -22,14 +22,13 @@ header {
 
 #main {
     display: flex;
-    justify-content: center;
     margin: 20px 100px;
     &__searchbar {
-        width: 110%;
+        width: 100%;
         height: 70px;
         background-color: #E7E7E7;
         border-radius: 5px;
-        border: #E7E7E7 solid 3px;
+        border: #E7E7E7;
         padding-left: 20px;
     }
     &__button {
@@ -57,7 +56,7 @@ header {
             opacity: 1;
         }
     }
-    &__blue {
+    &-blue {
         & input {
             background-color: #3282F7;
             border: #3282F7;
@@ -65,9 +64,16 @@ header {
         & button {
             background-color: #3282F7;
             border: #3282F7;
+            margin-left: -50px;
+            border: none;
+            cursor: pointer;
+        }
+        &__menu {
+            background-color: #3282F7;
+            @include searchbar-menu;
         }
     }
-    &__green {
+    &-green {
         & input {
             background: #68D9A4;
             border: #68D9A4;
@@ -75,9 +81,16 @@ header {
         & button {
             background: #68D9A4;
             border: #68D9A4;
+            margin-left: -50px;
+            border: none;
+            cursor: pointer;
+        }
+        &__menu {
+            background-color: #68D9A4;
+            @include searchbar-menu;
         }
     }
-    &__red {
+    &-red {
         & input {
             background: #ED6454;
             border: #ED6454;
@@ -85,6 +98,20 @@ header {
         & button {
             background: #ED6454;
             border: #ED6454;
+            margin-left: -50px;
+            border: none;
+            cursor: pointer;
+        }
+        &__menu {
+            background-color: #ED6454;
+            @include searchbar-menu;
         }
     }
+}
+
+.item-menu {
+    font-size: 1.1em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
