--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -6,11 +6,14 @@
     font-family: 'Lato', sans-serif;
 }
 
-.recipes-grid {
+#recipes-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 50px;
     margin: 25px 100px;
+}
+
+.recipes-card {
     &__item {
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
