--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -32,7 +32,7 @@
         margin: 20px;
     }
     &__title {
-        font-size: 1.2em;
+        font-size: 1em;
         max-width: 250px;
     }
     &__duration {
@@ -44,6 +44,14 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         margin: 20px;
+        padding-right: 5px;
+    }
+    &__ingredients {
+        font-size: 0.8em;
+        list-style: none;
+        &--item {
+            margin-bottom: 5px;
+        }
     }
     &__description {
         font-size: 0.8em;
