--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -22,5 +22,6 @@
     border-bottom-right-radius: 5px;
     margin-right: 20px;
     padding: 0 0 15px 15px;
-    z-index: -1;
+    z-index: 10;
+    position: absolute;
 }
