--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -17,6 +17,7 @@ header {
 
 #main {
   display: flex;
+  flex-direction: column;
   margin: 20px 100px; }
   #main__searchbar {
     width: 100%;
@@ -26,9 +27,10 @@ header {
     border: #E7E7E7;
     padding-left: 20px; }
   #main__button {
+    position: absolute;
     height: 60px;
     background-color: #E7E7E7;
-    margin-left: -50px;
+    right: 120px;
     margin-top: 5px;
     border: none;
     cursor: pointer; }
@@ -136,6 +138,26 @@ header {
   .item__menu a {
     text-decoration: none;
     color: #ffffff;
+    cursor: pointer; }
+
+#tag-container {
+  display: flex; }
+
+.tag {
+  display: flex;
+  margin: 15px 15px 0 0;
+  padding: 8px;
+  border-radius: 5px;
+  color: #ffffff;
+  max-width: 250px; }
+  .tag__blue {
+    background-color: #3282F7; }
+  .tag__green {
+    background-color: #68D9A4; }
+  .tag__red {
+    background-color: #ED6454; }
+  .tag__close {
+    margin-left: 10px;
     cursor: pointer; }
 
 * {
