--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -36,8 +36,10 @@
         max-width: 250px;
     }
     &__duration {
+        display: flex;
         &--icon {
             margin-right: 5px;
+            height: 20px;
         }
     }
     &__body {
