--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -149,5 +149,7 @@ header {
     &__close {
         margin-left: 10px;
         cursor: pointer;
+        background-color: transparent;
+        border: none;
     }
 }
