--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -158,7 +158,9 @@ header {
     background-color: #ED6454; }
   .tag__close {
     margin-left: 10px;
-    cursor: pointer; }
+    cursor: pointer;
+    background-color: transparent;
+    border: none; }
 
 * {
   margin: 0;
@@ -192,8 +194,11 @@ header {
   font-size: 1em;
   max-width: 250px; }
 
-.recipes-card__duration--icon {
-  margin-right: 5px; }
+.recipes-card__duration {
+  display: flex; }
+  .recipes-card__duration--icon {
+    margin-right: 5px;
+    height: 20px; }
 
 .recipes-card__body {
   display: grid;
