No results message

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -65,3 +65,10 @@
         text-overflow: ellipsis;
     }
 }
+
+#no-result {
+    display: none;
+    justify-content: center;
+    margin-top: 80px;
+    font-size: 2em;
+}
