--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -221,3 +221,9 @@ header {
   text-align: justify;
   text-overflow: ellipsis; }
 
+#no-result {
+  display: none;
+  justify-content: center;
+  margin-top: 80px;
+  font-size: 2em; }
+
