--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -59,9 +59,10 @@ header {
     border: #3282F7;
     color: #ffffff; }
   #secondary-blue button {
+    position: relative;
+    right: 50px;
     background-color: #3282F7;
     border: #3282F7;
-    margin-left: -50px;
     border: none;
     cursor: pointer; }
   #secondary-blue__menu {
@@ -84,9 +85,10 @@ header {
     border: #68D9A4;
     color: #ffffff; }
   #secondary-green button {
+    position: relative;
+    right: 50px;
     background: #68D9A4;
     border: #68D9A4;
-    margin-left: -50px;
     border: none;
     cursor: pointer; }
   #secondary-green__menu {
@@ -109,9 +111,10 @@ header {
     border: #ED6454;
     color: #ffffff; }
   #secondary-red button {
+    position: relative;
+    right: 50px;
     background: #ED6454;
     border: #ED6454;
-    margin-left: -50px;
     border: none;
     cursor: pointer; }
   #secondary-red__menu {
