--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -65,9 +65,10 @@ header {
             color: #ffffff;
         }
         & button {
+            position: relative;
+            right: 50px;
             background-color: #3282F7;
             border: #3282F7;
-            margin-left: -50px;
             border: none;
             cursor: pointer;
         }
@@ -83,9 +84,10 @@ header {
             color: #ffffff;
         }
         & button {
+            position: relative;
+            right: 50px;
             background: #68D9A4;
             border: #68D9A4;
-            margin-left: -50px;
             border: none;
             cursor: pointer;
         }
@@ -101,9 +103,10 @@ header {
             color: #ffffff;
         }
         & button {
+            position: relative;
+            right: 50px;
             background: #ED6454;
             border: #ED6454;
-            margin-left: -50px;
             border: none;
             cursor: pointer;
         }
